Correccion url de heroku

--- a/promotions/templates/home/index.html
+++ b/promotions/templates/home/index.html
@@ -202,7 +202,7 @@
                                 <ul class="dropdown-menu">
                                     <li><a href="#">Menu de usuario:</a></li>
                                     <li role="separator" class="divider"></li>
-                                    <li><a href="http://127.0.0.1:8000/profile/">Profile</a></li>
+                                    <li><a href="https://cpromotion.herokuapp.com/profile/">Profile</a></li>
                                     <li><a href="#">Promociones</a></li>
                                     <li><a href="#">Categorías</a></li>
                                     <li role="separator" class="divider"></li>
@@ -434,7 +434,7 @@
             // ==============================================================================================
             var getData;
 
-            $.getJSON("http://127.0.0.1:8000/list_promotion").done(function(data){
+            $.getJSON("https://cpromotion.herokuapp.com/list_promotion").done(function(data){
                 getData = data;
                 var colorCtr = 0;
                 console.log(getData);
@@ -500,7 +500,7 @@
                 e.preventDefault();
                 var promotionId = $(this).attr("id");
                 var splitId = promotionId.split("n");
-                $.getJSON("http://127.0.0.1:8000/list_promotion").done(function(data){
+                $.getJSON("https://cpromotion.herokuapp.com/list_promotion").done(function(data){
                     var promotionData = data;
                     // ======================================================================================
                     // Recorre el json para buscar cual es la promocion a consultar
@@ -622,7 +622,7 @@
                 } else {
                     $.ajax({
                         type: "POST",
-                        url: "http://127.0.0.1:8000/register_users/",
+                        url: "https://cpromotion.herokuapp.com/register_users/",
                         data: JSON.stringify({
                             first_name: $("#register-name").val(),
                             last_name: $("#register-last-name").val(),
@@ -637,7 +637,7 @@
                         dataType: "json",
                         success: function(data){
                             console.log(data);
-                            window.location.href = "http://127.0.0.1:8000/";
+                            window.location.href = "https://cpromotion.herokuapp.com/";
                         },
                         failure: function(errMessage){
                             console.log("Error enviando datos de registro");
@@ -656,7 +656,7 @@
                 e.preventDefault();
                 $.ajax({
                     type: "POST",
-                    url: "http://127.0.0.1:8000/login_users/",
+                    url: "https://cpromotion.herokuapp.com/login_users/",
                     data: JSON.stringify({
                         username: $("#login-username").val(),
                         password: $("#login-password").val()
@@ -665,7 +665,7 @@
                     dataType: "json",
                     success: function(data){
                         if(data.message === "ok"){
-                            window.location.href = "http://127.0.0.1:8000/";
+                            window.location.href = "https://cpromotion.herokuapp.com/";
                         } else {
                             console.log(data.message); // rear el texto para mostrar el retorno
                         }
@@ -681,9 +681,9 @@
             // ==============================================================================================
             $("#btn-logout").on("click", function(e){
                e.preventDefault();
-               $.getJSON("http://127.0.0.1:8000/logout_users/").done(function(data){
+               $.getJSON("https://cpromotion.herokuapp.com/logout_users/").done(function(data){
                     if( data.message === "ok"){
-                        window.location.href = "http://127.0.0.1:8000/";
+                        window.location.href = "https://cpromotion.herokuapp.com/";
                     } else {
                         console.log("Error al cerrar sesion");
                     }
@@ -695,7 +695,7 @@
             // Is auth controller
             // ==============================================================================================
             (function (){
-                $.getJSON("http://127.0.0.1:8000/logged_users/").done(function(data){
+                $.getJSON("https://cpromotion.herokuapp.com/logged_users/").done(function(data){
                     if( data.message === "logged"){
                         $("#li-login, #li-register").css("display", "none");
                         $("#li-welcome, #li-username").css("display", "block");
