Agegando imagen de ejemplo en profile

--- a/promotions/templates/profile/index.html
+++ b/promotions/templates/profile/index.html
@@ -75,7 +75,7 @@
                         <div class="panel panel-default">
                             <div class="panel-body">
                                 <div class="user-image">
-                                    <img src="" alt="Ejemplo borrar">
+                                    <img src="https://x1.xingassets.com/assets/frontend_minified/img/users/nobody_m.original.jpg" alt="Ejemplo borrar">
                                 </div>
                                 <div class="user-name">
                                     <h4 id="get-username-profile" >User Name</h4>
