--- a/promotions/templates/home/index.html
+++ b/promotions/templates/home/index.html
@@ -202,7 +202,7 @@
                                 <ul class="dropdown-menu">
                                     <li><a href="#">Menu de usuario:</a></li>
                                     <li role="separator" class="divider"></li>
-                                    <li><a href="https://cpromotion.herokuapp.com/profile/">Profile</a></li>
+                                    <li><a href="http://127.0.0.1:8000/profile/">Profile</a></li>
                                     <li><a href="#">Promociones</a></li>
                                     <li><a href="#">Categorías</a></li>
                                     <li role="separator" class="divider"></li>
@@ -412,6 +412,14 @@
                                         <label for="email">email:</label>
                                         <input type="email" class="form-control" id="register-email" placeholder="Email">
                                     </div>
+                                    <div class="form-group">
+                                        <label for="categorias">Categorías:</label>
+                                        <div class="panel panel-default">
+                                            <div class="panel-body">
+                                                <div id="register-category" class="row"></div>
+                                            </div>
+                                        </div>
+                                    </div>
                                 </div>
                             </div>
                                 </div>
@@ -428,16 +436,31 @@
     </section>
     <script type="text/javascript">
         $(document).ready(function () {
+            // ==============================================================================================
+            // Categories controller
+            // ==============================================================================================
+            var categorias;
+            var dataCategory = function(data){
+               categorias=data;
+               for(var ca=0; ca<categorias.length; ca++){
+                    $("#register-category").append(
+                        "<div class='col-md-4'>" +
+                           "<input type='checkbox' class='register-category' value='"+categorias[ca].fields.name+"'>"+categorias[ca].fields.name +
+                        "</div>"
+                    )
+                }
+
+            };
+            $.getJSON("http://127.0.0.1:8000/list_category").done(function(data){
+                dataCategory(data);
+            });
 
             // ==============================================================================================
             // Promotion object creator controller
             // ==============================================================================================
-            var getData;
-
-            $.getJSON("https://cpromotion.herokuapp.com/list_promotion").done(function(data){
-                getData = data;
+            $.getJSON("http://127.0.0.1:8000/list_promotion").done(function(data){
+                var  getData = data;
                 var colorCtr = 0;
-                console.log(getData);
                 var promotion_background, promotion_description;
                 for( var i=0; i<getData.length; i++){
                    var fields =  getData[i].fields;
@@ -486,7 +509,6 @@
                     colorCtr++;
                     if(colorCtr === 4) { colorCtr = 0; }
                     var getPromoDescription = $("#promotion-description"+getData[i].pk).text().substring(0, 56);
-                    console.log(getPromoDescription);
                     $("#promotion-description"+getData[i].pk).html("").append(getPromoDescription+"...");
                 }
             }).fail(function (jqxhr, textStatus, error) {
@@ -500,12 +522,20 @@
                 e.preventDefault();
                 var promotionId = $(this).attr("id");
                 var splitId = promotionId.split("n");
-                $.getJSON("https://cpromotion.herokuapp.com/list_promotion").done(function(data){
+
+                $.getJSON("http://127.0.0.1:8000/list_promotion").done(function(data){
                     var promotionData = data;
+                    console.log(categorias);
                     // ======================================================================================
                     // Recorre el json para buscar cual es la promocion a consultar
                     for(var i=0; i<promotionData.length; i++){
                         var getId = promotionData[i].pk;
+                        var categoryName;
+                        for(var c=0; c<categorias.length;c++){
+                            if(promotionData[i].fields.category === categorias[c].pk){
+                                categoryName = categorias[c].fields.name;
+                            }
+                        }
                         if( parseInt(getId) === parseInt(splitId[1])){
                             console.log(promotionData[i].fields);
                             // ==============================================================================
@@ -552,7 +582,7 @@
                                                 "<hr>" +
                                                 "<div class='row'>"+
                                                     "<div class='col-md-2'> "+
-                                                        "<div class='promo-category'>Nombre Categoria.</div>" +
+                                                        "<div class='promo-category'>"+categoryName+"</div>" +
                                                     "</div>" +
                                                     "<div class='col-md-1' style='width:24px'> | </div>"+
                                                     "<div class='col-md-1'>"+
@@ -603,6 +633,8 @@
                         }
                     }
 
+
+
                 }).fail(function (jqxhr, textStatus, error) {
                     var err = textStatus + ", " + error;
                 });
@@ -617,12 +649,25 @@
             // ==============================================================================================
             $("#send-register").on("click", function (e) {
                 e.preventDefault();
+                var getCheckCategory = $('.register-category');
+                var checkedCategory;
+                for(var cc=0; cc<getCheckCategory.length; cc++) {
+                    var checkCategory = getCheckCategory.eq(cc);
+                    if (checkCategory.is(':checked')){
+                        if(checkedCategory != undefined) {
+                            checkedCategory = checkedCategory + "-" + checkCategory.val();
+                        } else {
+                             checkedCategory = checkCategory.val();
+                        }
+                    }
+                }
+                console.log(checkedCategory);
                 if( $("#register-password").val() != $("#register-confirm-password").val() ){
                     console.log("las contraseñas no coinciden");
                 } else {
                     $.ajax({
                         type: "POST",
-                        url: "https://cpromotion.herokuapp.com/register_users/",
+                        url: "http://127.0.0.1:8000/register_users/",
                         data: JSON.stringify({
                             first_name: $("#register-name").val(),
                             last_name: $("#register-last-name").val(),
@@ -631,13 +676,14 @@
                             address: $("#register-address").val(),
                             username: $("#register-username").val(),
                             password: $("#register-password").val(),
-                            email: $("#register-email").val()
+                            email: $("#register-email").val(),
+                            category: checkedCategory
                         }),
                         contentType: "application/json; charset=utf-8",
                         dataType: "json",
                         success: function(data){
                             console.log(data);
-                            window.location.href = "https://cpromotion.herokuapp.com/";
+                            window.location.href = "http://127.0.0.1:8000/";
                         },
                         failure: function(errMessage){
                             console.log("Error enviando datos de registro");
@@ -656,7 +702,7 @@
                 e.preventDefault();
                 $.ajax({
                     type: "POST",
-                    url: "https://cpromotion.herokuapp.com/login_users/",
+                    url: "http://127.0.0.1:8000/login_users/",
                     data: JSON.stringify({
                         username: $("#login-username").val(),
                         password: $("#login-password").val()
@@ -665,7 +711,7 @@
                     dataType: "json",
                     success: function(data){
                         if(data.message === "ok"){
-                            window.location.href = "https://cpromotion.herokuapp.com/";
+                            window.location.href = "http://127.0.0.1:8000/";
                         } else {
                             console.log(data.message); // rear el texto para mostrar el retorno
                         }
@@ -681,9 +727,9 @@
             // ==============================================================================================
             $("#btn-logout").on("click", function(e){
                e.preventDefault();
-               $.getJSON("https://cpromotion.herokuapp.com/logout_users/").done(function(data){
+               $.getJSON("http://127.0.0.1:8000/logout_users/").done(function(data){
                     if( data.message === "ok"){
-                        window.location.href = "https://cpromotion.herokuapp.com/";
+                        window.location.href = "http://127.0.0.1:8000/";
                     } else {
                         console.log("Error al cerrar sesion");
                     }
@@ -695,7 +741,7 @@
             // Is auth controller
             // ==============================================================================================
             (function (){
-                $.getJSON("https://cpromotion.herokuapp.com/logged_users/").done(function(data){
+                $.getJSON("http://127.0.0.1:8000/logged_users/").done(function(data){
                     if( data.message === "logged"){
                         $("#li-login, #li-register").css("display", "none");
                         $("#li-welcome, #li-username").css("display", "block");
