Actualizando url remotas

--- a/promotions/templates/home/index.html
+++ b/promotions/templates/home/index.html
@@ -202,7 +202,7 @@
                                 <ul class="dropdown-menu">
                                     <li><a href="#">Menu de usuario:</a></li>
                                     <li role="separator" class="divider"></li>
-                                    <li><a href="http://127.0.0.1:8000/profile/">Profile</a></li>
+                                    <li><a href="https://cpromotion.herokuapp.com/profile/">Profile</a></li>
                                     <li><a href="#">Promociones</a></li>
                                     <li><a href="#">Categorías</a></li>
                                     <li role="separator" class="divider"></li>
@@ -451,14 +451,14 @@
                 }
 
             };
-            $.getJSON("http://127.0.0.1:8000/list_category").done(function(data){
+            $.getJSON("https://cpromotion.herokuapp.com/list_category").done(function(data){
                 dataCategory(data);
             });
 
             // ==============================================================================================
             // Promotion object creator controller
             // ==============================================================================================
-            $.getJSON("http://127.0.0.1:8000/list_promotion").done(function(data){
+            $.getJSON("https://cpromotion.herokuapp.com/list_promotion").done(function(data){
                 var  getData = data;
                 var colorCtr = 0;
                 var promotion_background, promotion_description;
@@ -523,7 +523,7 @@
                 var promotionId = $(this).attr("id");
                 var splitId = promotionId.split("n");
 
-                $.getJSON("http://127.0.0.1:8000/list_promotion").done(function(data){
+                $.getJSON("https://cpromotion.herokuapp.com/list_promotion").done(function(data){
                     var promotionData = data;
                     console.log(categorias);
                     // ======================================================================================
@@ -667,7 +667,7 @@
                 } else {
                     $.ajax({
                         type: "POST",
-                        url: "http://127.0.0.1:8000/register_users/",
+                        url: "https://cpromotion.herokuapp.com/register_users/",
                         data: JSON.stringify({
                             first_name: $("#register-name").val(),
                             last_name: $("#register-last-name").val(),
@@ -683,7 +683,7 @@
                         dataType: "json",
                         success: function(data){
                             console.log(data);
-                            window.location.href = "http://127.0.0.1:8000/";
+                            window.location.href = "https://cpromotion.herokuapp.com/";
                         },
                         failure: function(errMessage){
                             console.log("Error enviando datos de registro");
@@ -702,7 +702,7 @@
                 e.preventDefault();
                 $.ajax({
                     type: "POST",
-                    url: "http://127.0.0.1:8000/login_users/",
+                    url: "https://cpromotion.herokuapp.com/login_users/",
                     data: JSON.stringify({
                         username: $("#login-username").val(),
                         password: $("#login-password").val()
@@ -711,7 +711,7 @@
                     dataType: "json",
                     success: function(data){
                         if(data.message === "ok"){
-                            window.location.href = "http://127.0.0.1:8000/";
+                            window.location.href = "https://cpromotion.herokuapp.com/";
                         } else {
                             console.log(data.message); // rear el texto para mostrar el retorno
                         }
@@ -727,9 +727,9 @@
             // ==============================================================================================
             $("#btn-logout").on("click", function(e){
                e.preventDefault();
-               $.getJSON("http://127.0.0.1:8000/logout_users/").done(function(data){
+               $.getJSON("https://cpromotion.herokuapp.com/logout_users/").done(function(data){
                     if( data.message === "ok"){
-                        window.location.href = "http://127.0.0.1:8000/";
+                        window.location.href = "https://cpromotion.herokuapp.com/";
                     } else {
                         console.log("Error al cerrar sesion");
                     }
@@ -741,7 +741,7 @@
             // Is auth controller
             // ==============================================================================================
             (function (){
-                $.getJSON("http://127.0.0.1:8000/logged_users/").done(function(data){
+                $.getJSON("https://cpromotion.herokuapp.com/logged_users/").done(function(data){
                     if( data.message === "logged"){
                         $("#li-login, #li-register").css("display", "none");
                         $("#li-welcome, #li-username").css("display", "block");
