--- a/promotions/templates/profile/index.html
+++ b/promotions/templates/profile/index.html
@@ -62,7 +62,7 @@
                     </a>
                 </div>
                 <ul class="nav navbar-nav navbar-right">
-                    <li><a href="http://127.0.0.1:8000/">Regresar a cPromotion</a></li>
+                    <li><a href="https://cpromotion.herokuapp.com/">Regresar a cPromotion</a></li>
                     <li><a id="profile-logout" href="#">Singout <i class="fas fa-sign-out-alt"></i></a></li>
                 </ul>
             </div>
@@ -70,7 +70,7 @@
     </header>
     <article>
         <div class="container img-name-container">
-            <form id="profile-form" action="http://127.0.0.1:8000/edit_profile/" enctype="multipart/form-data" method="POST">
+            <form id="profile-form" action="https://cpromotion.herokuapp.com/edit_profile/" enctype="multipart/form-data" method="POST">
                 <div class="row">
                     <div class="col-md-3">
                         <div class="panel panel-default">
@@ -186,7 +186,7 @@
                 }
 
             };
-            $.getJSON("http://127.0.0.1:8000/list_category").done(function(data){
+            $.getJSON("https://cpromotion.herokuapp.com/list_category").done(function(data){
                 dataCategory(data);
             });
             // ==============================================================================================
@@ -210,14 +210,14 @@
                 });
                 $.ajax({
                     type: "POST",
-                    url: "http://127.0.0.1:8000/edit_profile/",
+                    url: "https://cpromotion.herokuapp.com/edit_profile/",
                     data: formData,
                     cache: false,
                     contentType: false,
                     processData: false,
                     success: function(data){
                         console.log(data);
-                        //window.location.href = "http://127.0.0.1:8000/profile/";
+                        //window.location.href = "https://cpromotion.herokuapp.com/profile/";
                     },
                     failure: function(errMessage){
                         console.log("Error enviando datos de registro");
@@ -229,9 +229,9 @@
             // ==============================================================================================
             $("#profile-logout").on("click", function(e){
                e.preventDefault();
-               $.getJSON("http://127.0.0.1:8000/logout_users/").done(function(data){
+               $.getJSON("https://cpromotion.herokuapp.com/logout_users/").done(function(data){
                     if( data.message === "ok"){
-                        window.location.href = "http://127.0.0.1:8000/";
+                        window.location.href = "https://cpromotion.herokuapp.com/";
                     } else {
                         console.log("Error al cerrar sesion");
                     }
@@ -243,7 +243,7 @@
             // Is auth controller
             // ==============================================================================================
             (function (){
-                $.getJSON("http://127.0.0.1:8000/logged_users/").done(function(data){
+                $.getJSON("https://cpromotion.herokuapp.com/logged_users/").done(function(data){
                     if( data.message === "logged"){
                         $("#li-login, #li-register").css("display", "none");
                         $("#li-welcome, #li-username").css("display", "block");
